<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/BannerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/textViewBanner"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textFontWeight=""
        tools:ignore="MissingConstraints"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textViewUserName"
        android:textFontWeight="100"
        app:layout_constraintTop_toBottomOf="@+id/BannerTextView"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/UserNameEditText"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:hint="ExampleName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textViwEmail"
        app:layout_constraintTop_toBottomOf="@+id/UserNameEditText"
        tools:layout_editor_absoluteX="0dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:hint="ExampleEmail@Email.ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailTextView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/SendButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/buttonSing"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailEditText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/buttonClear"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SendButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/MessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ClearButton"
        tools:layout_editor_absoluteX="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>